adding changes related to docker